[package]
name = "sampr"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.61"
futures = "0.3.25"
thiserror = "1.0.38"
log = "0.4.17"
tokio = { "version" = "1.24.2", "features" = ["rt", "sync", "macros"] }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { "version" = "1.24.2", "features" = ["macros", "time", "signal"] }
